Overflow hidden to fix image issue

--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,8 @@ h1 {
     height: 175px;
     color:#626467;
     cursor: pointer;
+    position: relative;
+    overflow: hidden;
 }
 
 .photos .detail1 {
